--- a/eva-forum/index.html
+++ b/eva-forum/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="img" href="./src/assets/EvaLogo4.png" />
+    <link rel="icon" type="img" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eva-Forum</title>
+    <title>Evangaid Forum</title>
   </head>
   <body>
     <div id="root"></div>
